CollapsibleSidebars channel list gap fix

--- a/DiscordPlusChunky.theme.css
+++ b/DiscordPlusChunky.theme.css
@@ -302,7 +302,7 @@ div[aria-label="Forward"] {
   position: relative;
 }
 .visual-refresh [class^="sidebar_"]:hover [class^="sidebarList_"] {
-  left: 165px;	/* 70px --> 1650px to go past Better Folders */
+  left: 160px;	/* 70px --> 160px to go past Better Folders */
   opacity: 1;
   width: 240px;
 }
